vcs/specs/parser/fail/expressions/unclosed_generic_args.vr
// @test: parse-fail
// @level: L0
// @tags: parser, expressions, generics, unclosed, error
// @description: Generic type arguments with unclosed angle bracket
// @expected-error: E010

fn test() {
    let x = foo::<Int(arg);  // Missing closing >
}
